[package]
name = "solana-geyser-wallet-indexer"
version = "0.1.0"
edition = "2024"

[lib]
name = "solana_geyser_wallet_indexer"
crate-type = ["cdylib"] 

[dependencies]
log = "0.4"
env_logger = "0.11"
agave-geyser-plugin-interface = "3.0.10"
bs58 = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
nats = "0.25"
chrono = { version = "0.4.42", features = ["serde"] }
