[package]
name = "clickhouse_ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.36"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
# Tokio runtime + timers (for interval/flush)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
# For StreamExt::next()
futures-util = "0.3"